# privacy-risk-analyzer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REBRAND.md  RESTRUCTURE.md  deploy-docs.sh  pyproject.toml  requirements.txt
bandit_grc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/: dashboard.py  main.py  report.py  setup.py  terminal.py  vendor.py  welcome.py  workflow.py
core/: __init__.py  config.py
core/agents/: __init__.py  base_bandit.py  legal_bandit.py  privacy_bandit.py
core/dashboard/: portfolio.py  register.py  schedule.py
core/data/: resolver.py
core/documents/: extractor.py
core/integrations/: google_drive.py
core/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py
core/notifications/: sender.py
core/profiles/: intake.py  vendor_cache.py
core/scoring/: RUBRIC.md  __init__.py  rubric.py
core/tools/: __init__.py  discover.py  fetch.py  parse.py
docs/: cli-reference.md  google-drive-setup.md  how-bandit-works.md  index.html  legal-guide.md  report-guide.md  setup-guide.md  vendor-guide.md
examples/: sample-high-risk-output.md  sample-low-risk-output.md
frameworks/: privacy-risk-scoring-rubric.md
integrations/: n8n-setup.md  slack-setup.md
legacy/: README.md
prompts/: PB-1-privacy-policy-analysis.md
research/: rubrik-research.md
tests/: test_intake.py  test_rubric.py  test_signal_merge.py  test_vendor_cache.py
workflows/: privacy-policy-analyzer.json
(+6 files in other folders)
