[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bandit-grc"
version = "1.4.0"
description = "Open-source AI agent for vendor privacy risk assessment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
drive = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
bandit = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cli*"]
